--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>counter app</h1>
+   <div>
+
+    <span id="counter">0</span>   
+    <br><br><br>
+
+    <button id="sub" onclick="countsub()">-</button>
+    <!-- <span id="counter">0</span> -->
+    <button id="add" onclick="countadd()">+</button>
+   </div>
     
     <script src="app.js"></script>
 </body>
